Fix: Remove 'Obsidian' from plugin description
- Update description to comply with Obsidian plugin submission guidelines
- Description cannot contain the word 'Obsidian'

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Zolapublish",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Manage, edit, sync and publish Zola-based blog posts from Obsidian",
+	"description": "Manage, edit, sync and publish Zola-based blog posts",
 	"author": "Junyi Yan",
 	"authorUrl": "https://junyiyan.xyz",
 	"isDesktopOnly": true
